<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5sp"
    app:contentPadding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shimmerColor"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200sp"
                android:contentDescription="@string/news_image"
                android:foreground="@color/shimmerColor"
                android:src="@drawable/example" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:foreground="@color/shimmerColor"
            android:maxLines="2"
            android:text="@string/news_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:foreground="@color/shimmerColor"
            android:maxLines="2"
            android:text="@string/news_desc"
            android:textColor="#F17575"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:foreground="@color/shimmerColor"
            android:maxLines="2"
            android:text="@string/news_published_at" />



    </LinearLayout>


</androidx.cardview.widget.CardView>