<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2sp"
    android:clickable="true"
    android:elevation="10dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="2dp"
    app:contentPadding="7dp">

    <RelativeLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:id="@+id/centerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/news_image"
                android:src="@drawable/example" />
        </LinearLayout>

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/centerImage"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/news_title"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/news_desc"
            android:textColor="#F17575"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsPublishedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsDesc"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/news_published_at" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>