<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Fragments.NewsDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/newsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/newsImage"
                        android:layout_width="match_parent"
                        android:layout_height="275dp" />


                    <LinearLayout
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/newsSource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/news_source"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/newsAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/news_author"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/newsTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-3sp"
                            android:layout_marginTop="5sp"
                            android:drawablePadding="1sp"
                            android:text="@string/news_title"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/newsPublishedAt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="5sp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/news_published_at"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/news_desc"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/top_line" />

                        <TextView
                            android:id="@+id/newsDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/lorem"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
